--- a/src/main/angular-media-app/src/app/main-page/main-page.component.html
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.html
@@ -35,8 +35,10 @@
                                             </div>
                                             <div class="custom-file">
                                                 <input type="file" class="custom-file-input" id="postImage"
-                                                    (change)="onFileSelected($event); onFileNameChanged($event)" name="image">
-                                                <label class="custom-file-label" for="postImage">{{selectedFile || 'Choose file'}}</label>
+                                                    (change)="onFileSelected($event); onFileNameChanged($event)"
+                                                    name="image">
+                                                <label class="custom-file-label" for="postImage">{{selectedFile ||
+                                                    'Choose file'}}</label>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -60,16 +62,15 @@
                                             <img alt="profile picture" title="Post's writer name"
                                                 src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912">
                                             <a href="google.hu">
-                                                <h5 class="card-title">{{post.user?.firstName}}
-                                                    {{post.user?.lastName}}</h5>
+                                                <h5 class="card-title"><b>{{post.user?.firstName}}
+                                                    {{post.user?.lastName}}</b></h5>
                                             </a>
                                         </div>
                                         <div class="card-body">
                                             <p class="card-text">{{post.text}}</p>
                                         </div>
                                         <img *ngIf="post.image != null" class="card-img-bottom" title="Post's image"
-                                            [src]="post.getImageSrc()"
-                                            alt="Card image cap">
+                                            [src]="post.getImageSrc()" alt="Card image cap">
                                         <div class="count-section">
                                             <i class="fa fa-thumbs-up pr-3"> {{post.likes.length}}</i>
                                             <i class="fa fa-comment"> {{post.comments.length}}</i>
@@ -78,17 +79,54 @@
                                             <div class="row">
                                                 <div class="col-12 col-md-6 pb-2">
                                                     <div *ngIf=!post.isLikedByUser>
-                                                        <button type="button" class="btn btn-dark block-button" (click)="likePost(post)"><i
-                                                            class="fa fa-thumbs-o-up"></i> Like</button>
+                                                        <button type="button" class="btn btn-dark block-button"
+                                                            (click)="likePost(post)"><i class="fa fa-thumbs-o-up"></i>
+                                                            Like</button>
                                                     </div>
                                                     <div *ngIf=post.isLikedByUser>
-                                                        <button type="button" class="btn btn-info block-button" (click)="unlikePost(post)"><i
-                                                            class="fa fa-thumbs-up"></i> Like</button>
+                                                        <button type="button" class="btn btn-info block-button"
+                                                            (click)="unlikePost(post)"><i class="fa fa-thumbs-up"></i>
+                                                            Like</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-12 col-md-6">
                                                     <button type="button" class="btn btn-dark block-button"><i
                                                             class="fa fa-comment-o"></i> Comment</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <hr>
+                                        <div class="card-body">
+                                            <div class="comments">
+                                                <div class="comment comment-profile">
+                                                    <a href="google.hu">
+                                                        <img alt="profile picture" title="Post's writer name"
+                                                            src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912">
+                                                    </a>
+                                                    <div class="card text-white bg-secondary comment-text">
+                                                        <a href="google.hu">
+                                                            <h6 class="card-title"><b>Comment writer's name</b></h6>
+                                                        </a> 
+                                                        <p class="card-text">
+                                                            hellodfsggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
+                                                        </p>
+                                                    </div>
+                                                    <a class="comment-like" href="like.hu"><i>Like </i></a>
+                                                </div>
+                                                <div class="comment comment-profile">
+                                                    <a href="google.hu">
+                                                        <img alt="profile picture" title="Post's writer name"
+                                                            src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912">
+                                                    </a>
+                                                    <div class="card text-white bg-secondary comment-text">
+                                                        <a href="google.hu">
+                                                            <h6 class="card-title"><b>Comment writer's name</b></h6>
+                                                        </a> 
+                                                        <p class="card-text">
+                                                            hellodfsggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
+                                                        </p>
+                                                    </div>
+                                                    <a class="comment-like" href="like.hu"><i>Like </i></a>
                                                 </div>
                                             </div>
                                         </div>
